--- a/your-code/pandas_1_concat-merge-join.ipynb
+++ b/your-code/pandas_1_concat-merge-join.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,11 +41,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    A   B   C\n",
+      "0  a0  b0  c0\n",
+      "1  a1  b1  c1\n",
+      "2  a2  b2  c2 \n",
+      "---\n",
+      "     A   B   C\n",
+      "3  a3  b3  c3\n",
+      "4  a4  b4  c4\n",
+      "5  a5  b5  c5 \n",
+      "---\n",
+      "     D   E   F\n",
+      "0  d0  e0  f0\n",
+      "1  d1  e1  f1\n",
+      "2  d2  e2  f2 \n",
+      "---\n",
+      "     D   E   F\n",
+      "3  d3  e3  f3\n",
+      "4  d4  e4  f4\n",
+      "5  d5  e5  f5\n"
+     ]
+    }
+   ],
    "source": [
     "df1 = pd.DataFrame({'A': ['a'+str(x) for x in range(3)],\n",
     "                    'B': ['b'+str(x) for x in range(3)],\n",
@@ -67,7 +93,7 @@
     "                    'F': ['f'+str(x) for x in range(3, 6)]},\n",
     "                     index=[3, 4, 5]) \n",
     "\n",
-    "# print(df1, '\\n---\\n', df2, '\\n---\\n', df3, '\\n---\\n',df4)"
+    "print(df1, '\\n---\\n', df2, '\\n---\\n', df3, '\\n---\\n',df4)"
    ]
   },
   {
@@ -79,11 +105,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Concatenated df1 and df2:\n",
+      "    A   B   C\n",
+      "0  a0  b0  c0\n",
+      "1  a1  b1  c1\n",
+      "2  a2  b2  c2\n",
+      "3  a3  b3  c3\n",
+      "4  a4  b4  c4\n",
+      "5  a5  b5  c5\n",
+      "\n",
+      "Concatenated df3 and df4:\n",
+      "    D   E   F\n",
+      "0  d0  e0  f0\n",
+      "1  d1  e1  f1\n",
+      "2  d2  e2  f2\n",
+      "3  d3  e3  f3\n",
+      "4  d4  e4  f4\n",
+      "5  d5  e5  f5\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "result1 = pd.concat([df1, df2], axis=0, ignore_index=True)# Concatenate df1 and df2 vertically\n",
+    "\n",
+    "result2 = pd.concat([df3, df4], axis=0, ignore_index=True)# Concatenate df3 and df4 vertically\n",
+    "\n",
+    "# Display the results\n",
+    "print(\"Concatenated df1 and df2:\")\n",
+    "print(result1)\n",
+    "\n",
+    "print(\"\\nConcatenated df3 and df4:\")\n",
+    "print(result2)"
    ]
   },
   {
@@ -99,11 +160,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     A    B    C    D    E    F\n",
+      "0   a0   b0   c0  NaN  NaN  NaN\n",
+      "1   a1   b1   c1  NaN  NaN  NaN\n",
+      "2   a2   b2   c2  NaN  NaN  NaN\n",
+      "3   a3   b3   c3  NaN  NaN  NaN\n",
+      "4   a4   b4   c4  NaN  NaN  NaN\n",
+      "5   a5   b5   c5  NaN  NaN  NaN\n",
+      "0  NaN  NaN  NaN   d0   e0   f0\n",
+      "1  NaN  NaN  NaN   d1   e1   f1\n",
+      "2  NaN  NaN  NaN   d2   e2   f2\n",
+      "3  NaN  NaN  NaN   d3   e3   f3\n",
+      "4  NaN  NaN  NaN   d4   e4   f4\n",
+      "5  NaN  NaN  NaN   d5   e5   f5\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "result = pd.concat([df1, df2, df3, df4], axis=0, sort=False)# Concatenate all four DataFrames vertically\n",
+    "\n",
+    "print(result)"
    ]
   },
   {
@@ -122,11 +207,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      A    B    C    D    E    F\n",
+      "0    a0   b0   c0  NaN  NaN  NaN\n",
+      "1    a1   b1   c1  NaN  NaN  NaN\n",
+      "2    a2   b2   c2  NaN  NaN  NaN\n",
+      "3    a3   b3   c3  NaN  NaN  NaN\n",
+      "4    a4   b4   c4  NaN  NaN  NaN\n",
+      "5    a5   b5   c5  NaN  NaN  NaN\n",
+      "6   NaN  NaN  NaN   d0   e0   f0\n",
+      "7   NaN  NaN  NaN   d1   e1   f1\n",
+      "8   NaN  NaN  NaN   d2   e2   f2\n",
+      "9   NaN  NaN  NaN   d3   e3   f3\n",
+      "10  NaN  NaN  NaN   d4   e4   f4\n",
+      "11  NaN  NaN  NaN   d5   e5   f5\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "result = pd.concat([df1, df2, df3, df4], axis=0, ignore_index=True, sort=False)# Concatenate all four DataFrames vertically\n",
+    "\n",
+    "print(result)"
    ]
   },
   {
@@ -150,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +334,7 @@
        "2  i2  a2  b2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +404,7 @@
        "2  i3  c3  d3"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,11 +429,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      A   B   C   D\n",
+      "idx                \n",
+      "i1   a1  b1  c1  d1\n",
+      "i2   a2  b2  c2  d2\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "# Set 'idx' as the index for both DataFrames\n",
+    "left.set_index('idx', inplace=True)\n",
+    "right.set_index('idx', inplace=True)\n",
+    "\n",
+    "# Perform the join\n",
+    "result = left.join(right, how='inner')  # You can also use 'outer', 'left', or 'right' for different join types\n",
+    "\n",
+    "print(result)"
    ]
   },
   {
@@ -364,11 +493,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    A   B   C   D   E   F\n",
+      "0  a0  b0  c0  d0  e0  f0\n",
+      "1  a1  b1  c1  d1  e1  f1\n",
+      "2  a2  b2  c2  d2  e2  f2\n",
+      "3  a3  b3  c3  d3  e3  f3\n",
+      "4  a4  b4  c4  d4  e4  f4\n",
+      "5  a5  b5  c5  d5  e5  f5\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "df1_2 = pd.concat([df1, df2])# Concatenate df1 and df2 vertically\n",
+    "\n",
+    "df3_4 = pd.concat([df3, df4])# Concatenate df3 and df4 vertically\n",
+    "\n",
+    "result = pd.concat([df1_2, df3_4], axis=1)# Concatenate df1_2 and df3_4 horizontally\n",
+    "\n",
+    "print(result)"
    ]
   }
  ],
@@ -388,7 +539,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.7"
   },
   "toc": {
    "base_numbering": 1,
@@ -405,5 +556,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
